--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,12 @@ builder-debug.yml
 builder-effective-config.yaml
 .DS_Store
 Thumbs.db
+node_modules/
+client/node_modules/
+dist/
+client/dist/
+build/
+release/
+.DS_Store
+.env
+*.log
