--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "studyplan-client",
   "private": true,
-  "version": "1.0.0",
+  "version": "1.6.9",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -19,11 +19,12 @@
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.18",
+    "@tauri-apps/cli": "^2.10.0",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
     "tailwindcss": "^4.1.18",
     "terser": "^5.46.0",
-    "vite": "^5.0.8"
+    "vite": "^5.4.21"
   }
 }
