--- a/package.json
+++ b/package.json
@@ -1,20 +1,19 @@
 {
   "name": "studyplan",
-  "version": "1.9.4",
+  "version": "2.0.0",
   "description": "StudyPlan — Calendario e pianificatore esami per studenti universitari",
-  "author": "TechnoJaw",
+  "author": "Pietro Longo",
   "private": true,
   "scripts": {
+    "tauri": "npx @tauri-apps/cli",
     "dev": "npx @tauri-apps/cli dev",
-    "build": "npx @tauri-apps/cli build --bundles app",
-    "build:dmg": "npx @tauri-apps/cli build --bundles dmg",
+    "build": "npx @tauri-apps/cli build --target universal-apple-darwin",
+    "build:mac": "npx @tauri-apps/cli build --target universal-apple-darwin",
+    "build:mac-arm": "npx @tauri-apps/cli build --target aarch64-apple-darwin",
+    "build:mac-intel": "npx @tauri-apps/cli build --target x86_64-apple-darwin",
+    "build:win": "npx @tauri-apps/cli build --target x86_64-pc-windows-msvc --bundles msi",
     "build:all": "npx @tauri-apps/cli build",
-    "build:mac-arm": "npx @tauri-apps/cli build --target aarch64-apple-darwin --bundles app",
-    "build:mac-intel": "npx @tauri-apps/cli build --target x86_64-apple-darwin --bundles app",
-    "build:win": "npx @tauri-apps/cli build --target x86_64-pc-windows-msvc",
-    "deploy:desktop": "VER=$(node -p \"require('./package.json').version\") && APP=$(ls -d src-tauri/target/release/bundle/macos/*.app 2>/dev/null | head -1) && rm -rf ~/Desktop/StudyPlan.app && ditto \"$APP\" ~/Desktop/StudyPlan.app && xattr -cr ~/Desktop/StudyPlan.app && codesign --force --deep --sign - ~/Desktop/StudyPlan.app && DIR=~/Desktop/Le\\ Mie\\ App/StudyPlan && mkdir -p \"$DIR\" && rm -f \"$DIR\"/*.dmg 2>/dev/null; for f in src-tauri/target/release/bundle/dmg/*.dmg; do cp \"$f\" \"$DIR/StudyPlan v.${VER}.dmg\" 2>/dev/null; done && echo \"✅ StudyPlan v$VER → Desktop + Le Mie App\"",
-    "deploy:releases": "VER=$(node -p \"require('./package.json').version\") && mkdir -p releases && for f in src-tauri/target/release/bundle/dmg/*.dmg; do cp \"$f\" releases/StudyPlan\\ v.${VER}.dmg 2>/dev/null; done && echo \"✅ DMG v$VER → releases/\"",
-    "install": "npm run build && npm run deploy:desktop",
+    "build:me": "npx @tauri-apps/cli build && rm -rf /Applications/StudyPlan.app ~/Desktop/StudyPlan.app && cp -R src-tauri/target/release/bundle/macos/StudyPlan.app /Applications/ && cp -R src-tauri/target/release/bundle/macos/StudyPlan.app ~/Desktop/ && echo '\\n✅ BOOM! App aggiornata in Applicazioni e sulla Scrivania.'",
     "icons": "python3 scripts/generate-icons.py"
   },
   "devDependencies": {
