fix(ci): condiziona features desktop + keyring/open, rimuovi codesign vuoto, aggiungi cdylib, cfg guards Android

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -10,7 +10,7 @@ rust-version = "1.77.2"
 
 [lib]
 name = "app_lib"
-crate-type = ["rlib"]
+crate-type = ["rlib", "cdylib"]
 
 [build-dependencies]
 tauri-build = { version = "2.5.4", features = [] }
@@ -19,7 +19,7 @@ tauri-build = { version = "2.5.4", features = [] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 log = "0.4"
-tauri = { version = "2.10.0", features = ["tray-icon", "macos-private-api"] }
+tauri = { version = "2.10.0", features = [] }
 tauri-plugin-log = "2"
 tauri-plugin-dialog = "2"
 tauri-plugin-shell = "2"
@@ -27,15 +27,27 @@ tauri-plugin-notification = "2"
 tauri-plugin-clipboard-manager = "2"
 tauri-plugin-fs = "2"
 tauri-plugin-os = "2"
-keyring = { version = "3", features = ["apple-native", "windows-native"] }
 uuid = { version = "1", features = ["v4"] }
 chrono = { version = "0.4", features = ["serde"] }
 dirs = "5"
 rand = "0.8"
 whoami = "1"
-open = "5"
 image = { version = "0.25", default-features = false, features = ["png"] }
 tokio = { version = "1", features = ["time"] }
+
+[features]
+default = ["desktop"]
+desktop = ["tauri/tray-icon", "tauri/macos-private-api"]
+mobile = []
+
+# Desktop-only dependencies (keyring, open non compilano su Android)
+[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
+keyring = { version = "3", features = ["apple-native", "windows-native"] }
+open = "5"
+
+# Android: keyring senza features native
+[target.'cfg(target_os = "android")'.dependencies]
+keyring = { version = "3", features = [] }
 
 # macOS-only: App Nap prevention via NSProcessInfo FFI
 [target.'cfg(target_os = "macos")'.dependencies]
