--- a/.github/workflows/release-all.yml
+++ b/.github/workflows/release-all.yml
@@ -11,7 +11,7 @@ permissions:
 
 jobs:
   # ==========================================
-  # 1. BUILD DESKTOP (MACOS UNIVERSAL & WINDOWS MSI)
+  # 1. BUILD DESKTOP (MACOS UNIVERSAL & WINDOWS MSI+NSIS)
   # ==========================================
   build-desktop:
     strategy:
@@ -53,16 +53,10 @@ jobs:
           npm install
           cd client && npm install --legacy-peer-deps
 
-      - name: Compila e Pubblica (Tauri Action)
+      - name: Compila e Pubblica
         uses: tauri-apps/tauri-action@v0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          APPLE_CERTIFICATE: ${{ secrets.APPLE_CERTIFICATE }}
-          APPLE_CERTIFICATE_PASSWORD: ${{ secrets.APPLE_CERTIFICATE_PASSWORD }}
-          APPLE_SIGNING_IDENTITY: ${{ secrets.APPLE_SIGNING_IDENTITY }}
-          APPLE_ID: ${{ secrets.APPLE_ID }}
-          APPLE_PASSWORD: ${{ secrets.APPLE_PASSWORD }}
-          APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
         with:
           tagName: ${{ github.ref_name }}
           releaseName: "StudyPlan ${{ github.ref_name }}"
@@ -80,7 +74,7 @@ jobs:
       - name: Checkout del codice
         uses: actions/checkout@v4
 
-      - name: Rimuovi config cargo locale (path lld locali non validi su CI)
+      - name: Rimuovi config cargo locale
         run: rm -f src-tauri/.cargo/config.toml
 
       - name: Setup Node.js
@@ -88,7 +82,7 @@ jobs:
         with:
           node-version: 22
 
-      - name: Setup Java (Richiesto per Android)
+      - name: Setup Java 17
         uses: actions/setup-java@v4
         with:
           distribution: 'zulu'
@@ -96,6 +90,12 @@ jobs:
 
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3
+
+      - name: Setup Android NDK
+        uses: nttld/setup-ndk@v1
+        id: setup-ndk
+        with:
+          ndk-version: r27c
 
       - name: Setup Rust (Target Android)
         uses: dtolnay/rust-toolchain@stable
@@ -107,21 +107,17 @@ jobs:
         with:
           workspaces: './src-tauri -> target'
 
-      - name: Setup Android NDK
-        uses: nttld/setup-ndk@v1
-        id: setup-ndk
-        with:
-          ndk-version: r27c
-
       - name: Installa Dipendenze Frontend
         run: |
           npm install
           cd client && npm install --legacy-peer-deps
 
-      - name: Inizializza progetto Android (tauri android init)
+      - name: Inizializza progetto Android
         run: npx tauri android init
+        env:
+          NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
 
-      - name: Decodifica Keystore Android (Firma)
+      - name: Decodifica Keystore Android
         env:
           KEYSTORE_BASE64: ${{ secrets.ANDROID_KEYSTORE_BASE64 }}
         run: |
@@ -130,19 +126,18 @@ jobs:
             echo "$KEYSTORE_BASE64" | base64 --decode > src-tauri/gen/android/app/studyplan-release.keystore
             echo "Keystore decodificato con successo."
           else
-            echo "Nessun keystore trovato nei segreti. Procedo con build non firmata."
+            echo "Nessun keystore trovato. Build non firmata."
           fi
 
       - name: Build Android APK
         env:
-          ANDROID_HOME: ${{ env.ANDROID_HOME }}
           NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
           TAURI_ANDROID_KEYSTORE_PASSWORD: ${{ secrets.ANDROID_STORE_PASSWORD }}
           TAURI_ANDROID_KEY_ALIAS: ${{ secrets.ANDROID_KEY_ALIAS }}
           TAURI_ANDROID_KEY_PASSWORD: ${{ secrets.ANDROID_KEY_PASSWORD }}
         run: npx tauri android build
 
-      - name: Carica APK nella Release di GitHub
+      - name: Carica APK nella Release
         uses: softprops/action-gh-release@v2
         if: startsWith(github.ref, 'refs/tags/')
         with:
