fix(ci): serializza android dopo desktop, gradle.properties anti-OOM

--- a/.github/workflows/release-all.yml
+++ b/.github/workflows/release-all.yml
@@ -69,6 +69,7 @@ jobs:
   # 2. BUILD ANDROID (APK/AAB)
   # ==========================================
   build-android:
+    needs: build-desktop
     runs-on: ubuntu-latest
     steps:
       - name: Checkout del codice
@@ -116,6 +117,13 @@ jobs:
         run: npx tauri android init
         env:
           NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
+
+      - name: Configura Gradle per CI
+        run: |
+          mkdir -p src-tauri/gen/android
+          echo "org.gradle.jvmargs=-Xmx3g -XX:MaxMetaspaceSize=512m" > src-tauri/gen/android/gradle.properties
+          echo "org.gradle.daemon=false" >> src-tauri/gen/android/gradle.properties
+          echo "org.gradle.parallel=false" >> src-tauri/gen/android/gradle.properties
 
       - name: Decodifica Keystore Android
         env:
